...
      children: [
        const SizedBox(height: 10.0),
        buildTextField(
          controller: _usernameController,
          labelText: translationService.translate("FORM_USERNAME"),
          hintText: translationService.translate("FORM_USERNAME"),
          key: 'usernameField',
        ),
        const SizedBox(height: 10.0),
        buildTextField(
          controller: _passwordController,
          labelText: translationService.translate("FORM_PASSWORD"),
          hintText: translationService.translate("FORM_PASSWORD"),
          key: 'passwordField',
          obscureText: true,
        ),
        const SizedBox(height: 4.0),
        forgotAccountLink(translationService),
      ],
    );
...
